--- a/index.html
+++ b/index.html
@@ -456,9 +456,9 @@
 
 				<div class="footer__row">
 					<div class="footer__downloads">
-						<a href="#"><img src="/icons/smm/a.png" alt="" /></a>
-						<a href="#"><img src="/icons/smm/g.png" alt="" /></a>
-						<a href="#"><img src="/icons/smm/w.png" alt="" /></a>
+						<a href="#"><img src="/icons/grids/apple.png" alt="" /></a>
+						<a href="#"><img src="/icons/grids/google.png" alt="" /></a>
+						<a href="#"><img src="/icons/grids/windows.png" alt="" /></a>
 					</div>
 				</div>
 			</div>
