--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
 		/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet"
@@ -456,9 +456,9 @@
 
 				<div class="footer__row">
 					<div class="footer__downloads">
-						<a href="#"><img src="/icons/grids/apple.png" alt="" /></a>
-						<a href="#"><img src="/icons/grids/google.png" alt="" /></a>
-						<a href="#"><img src="/icons/grids/windows.png" alt="" /></a>
+						<a href="#"><img src="./icons/grids/apple.png" alt="" /></a>
+						<a href="#"><img src="./icons/grids/google.png" alt="" /></a>
+						<a href="#"><img src="./icons/grids/windows.png" alt="" /></a>
 					</div>
 				</div>
 			</div>
